# mailgun-to-paperless-ngx

./: .gitignore  Dockerfile  Makefile  README.md  config.py  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml  tests.yml
app/: __init__.py
app/main/: __init__.py  routes.py
tests/: test_app.py
